# gecko_inspired_perching

./: README.md
state_control/: CMakeLists.txt  manifest.xml  package.xml
state_control/config/: QuadrotorFoxtrot_params.yaml  controllers.yaml  hummingbird_gains.yaml
state_control/include/: README.txt  nano_kontrol2.h  trajectory.h  vectorTypes.hpp  vectorUtilities.hpp
state_control/launch/: PerchPlate.launch  comms.launch  papa.launch  quad.launch  rviz_config.rviz  simulator.launch  so3_cmd.sh  so3_cmd.yaml  test.launch
state_control/src/: state_control.cpp  trajectory.cpp
