<package>
  <name>state_control_gp</name>
  <version>1.0.0</version>
  <description>

    state_control_gp

  </description>
  <maintainer email="jut@seas.upenn.edu">Justin Thomas</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- build_depend>std_srvs</build_depend -->
  <!-- build_depend>sensor_msgs</build_depend -->
  <!-- build_depend>quadrotor_msgs</build_depend -->
  <build_depend>trackers_manager</build_depend>
  <build_depend>mav_manager</build_depend>
  <!-- build_depend>velocity_tracker</build_depend -->
  <!-- build_depend>line_tracker</build_depend -->
  <!-- build_depend>null_tracker</build_depend -->
  <build_depend>tf</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <!-- run_depend>sensor_msgs</run_depend>
  <run_depend>quadrotor_msgs</run_depend -->
  <run_depend>trackers_manager</run_depend>
  <run_depend>mav_manager</run_depend>
  <!-- run_depend>velocity_tracker</run_depend>
  <run_depend>line_tracker</run_depend>
  <run_depend>null_tracker</run_depend -->
  <run_depend>tf</run_depend>

</package>
